<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/messageText"
        android:id="@+id/messageBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messageHint"
        android:inputType="text"
        android:layout_below="@+id/messageBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phoneMessage"
        android:id="@+id/phoneNumberBox"
        android:layout_below="@+id/message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:layout_below="@+id/phoneNumberBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timeMessage"
        android:id="@+id/timeBox"
        android:layout_below="@+id/phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeHint"
        android:inputType="number"
        android:digits="1234567890"
        android:layout_below="@+id/timeBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
